[workspace]
members = ["."]
resolver = "2"

[workspace.package]
rust-version = "1.94.0"

[workspace.lints.rust]
unsafe_code     = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
wildcard_imports          = "allow"
module_name_repetitions   = "allow"
must_use_candidate        = "allow"
missing_errors_doc        = "allow"
missing_panics_doc        = "allow"
items_after_statements    = "allow"
struct_excessive_bools    = "allow"
similar_names             = "allow"
many_single_char_names    = "allow"
unnecessary_literal_bound = "allow"
doc_markdown              = "allow"
ref_option                = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value    = "allow"
cast_possible_wrap        = "allow"
cast_possible_truncation  = "allow"
cast_precision_loss       = "allow"
cast_sign_loss            = "allow"
unwrap_in_result          = "warn"
panic                     = "warn"
todo                      = "warn"
dbg_macro                 = "warn"
print_stdout              = "warn"
print_stderr              = "warn"

[package]
name = "tokimo-web-search"
version = "0.1.0"
edition = "2024"
description = "Multi-engine web search (SearXNG-inspired): fan-out, dedup, rank, readability detail"

[lib]
name = "tokimo_web_search"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.13", features = ["json", "cookies", "gzip", "brotli"] }
scraper = "0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
futures = "0.3"
async-trait = "0.1"
url = "2"
urlencoding = "2"
percent-encoding = "2"
regex = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
html-escape = "0.2"
rand = "0.8"
tokimo-web-fetch = { git = "https://github.com/tokimo-lab/tokimo-package-web-fetch", rev = "4264aded2672f594c5bdb705c04047a882ca683d" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[lints]
workspace = true
